tp3/pod-blue.yml
apiVersion: v1
kind: Pod
metadata:
  namespace: production
  name: pod-blue
  labels:
    app: web-blue
spec:
  containers:
    - name: web
      image: mmumshad/simple-webapp-color
      ports:
        - name: web
          containerPort: 8080
          protocol: TCP
