tp3/service-nodeport-blue.yml
apiVersion: v1
kind: Service
metadata:
  namespace: production
  name: app-service-blue
spec:
  type: NodePort
  selector:
      app: web-blue
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30009
