tp3/service-nodeport-red.yml
apiVersion: v1
kind: Service
metadata:
  namespace: production
  name: app-service-red
spec:
  type: NodePort
  selector:
      app: web-red
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30008
