tp3/service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  namespace: production
  name: app-service
spec:
  type: NodePort
  selector:
      app: web
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30008
