tp3/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: production
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hello-world.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-service-red
            port:
              number: 8080
